tests/toylang/neg/001041_mutation.toylang
program a = { if a then sleep else sleep 0; } .
